--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Food Festival</title>
-  <link rel="stylesheet" href="assets/css/style.css">
-  <link rel="stylesheet" href="assets/css/bootstrap.css">
+  <link rel="stylesheet" href="./assets/css/style.css">
+  <link rel="stylesheet" href="./assets/css/bootstrap.css">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 
-  <script src="./dist/main.bundle.js" defer ></script>
+  <script src="./dist/app.bundle.js" defer ></script>
 
 </head>
 <body>
@@ -23,15 +23,15 @@
         <div class="collapse navbar-collapse" id="navbarResponsive">
           <ul class="navbar-nav ml-auto">
             <li class="nav-item active">
-              <a class="nav-link" href="index.html">Home
+              <a class="nav-link" href="./index.html">Home
                     <span class="sr-only">(current)</span>
                   </a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="schedule.html">Schedule</a>
+              <a class="nav-link" href="./schedule.html">Schedule</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="tickets.html">Tickets</a>
+              <a class="nav-link" href="./tickets.html">Tickets</a>
             </li>
           </ul>
         </div>
